<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svsButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bInfo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:text="@string/bill_info"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textDisplayAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/viewAmt" />

    <EditText
        android:id="@+id/editAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/editAmt"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textDisplayDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/viewDis" />

    <EditText
        android:id="@+id/discountAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/editDis"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:context=".MainActivity">

        <ToggleButton
            android:id="@+id/svsTogButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/noSVS"
            android:textOn="@string/SVS" />

        <ToggleButton
            android:id="@+id/gstTogButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:textOff="@string/noGST"
            android:textOn="@string/GST" />
    </LinearLayout>

    <TextView
        android:id="@+id/grpPayinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/grpPayinfo"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textDisplayPax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/viewPax" />

    <EditText
        android:id="@+id/editPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:ems="10"
        android:hint="@string/editPax"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:context=".MainActivity">

        <RadioGroup
            android:id="@+id/paymentRadioGrp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/paynowButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paynowbutton" />

            <RadioButton
                android:id="@+id/cashButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cashbutton" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity" >

            <TextView
                android:id="@+id/paynowNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Paynow Number" />

            <EditText
                android:id="@+id/editPaynowNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter Phone Number"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="CALCULATE" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="RESET" />
    </LinearLayout>

    <TextView
        android:id="@+id/finalDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:hint="Final Calculation:" />

    <TextView
        android:id="@+id/finalBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="Total Bill:" />

    <TextView
        android:id="@+id/perPaxBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="Bill Per Pax:" />

</LinearLayout>